fuera package-lock

--- a/SCSS/_globales.scss
+++ b/SCSS/_globales.scss
@@ -47,6 +47,15 @@ html {
                 max-width: 1200px;
             }
         }
+
+        figure {
+            margin: 0;
+
+            img {
+                width: 100%;
+                display: block;
+            }
+        }
     }
 }
 
