--- a/SCSS/_globales.scss
+++ b/SCSS/_globales.scss
@@ -38,6 +38,10 @@ html {
             margin-bottom: 1rem;
         }
 
+        .bold {
+            font-family: $font-bd;
+        }
+
         .wrapper {
             width: 90%;
             margin: 0 auto;
