--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -48,25 +48,30 @@ html body .titulo {
 }
 
 /* line 41, SCSS/_globales.scss */
+html body .bold {
+  font-family: "quattrocento-bd";
+}
+
+/* line 45, SCSS/_globales.scss */
 html body .wrapper {
   width: 90%;
   margin: 0 auto;
 }
 
 @media only screen and (min-width: 769px) {
-  /* line 41, SCSS/_globales.scss */
+  /* line 45, SCSS/_globales.scss */
   html body .wrapper {
     width: 83.3333333%;
     max-width: 1200px;
   }
 }
 
-/* line 51, SCSS/_globales.scss */
+/* line 55, SCSS/_globales.scss */
 html body figure {
   margin: 0;
 }
 
-/* line 54, SCSS/_globales.scss */
+/* line 58, SCSS/_globales.scss */
 html body figure img {
   width: 100%;
   display: block;
@@ -132,40 +137,116 @@ html body figure img {
   transform: rotate(-45deg) translate(6px, -7px);
 }
 
-/* line 54, SCSS/_header.scss */
+@media only screen and (min-width: 769px) {
+  /* line 53, SCSS/_header.scss */
+  .fecha-menu {
+    width: 100%;
+    background-color: #005b81;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 500;
+  }
+}
+
+@media only screen and (min-width: 769px) {
+  /* line 63, SCSS/_header.scss */
+  .fecha-menu .wrapper {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
+/* line 70, SCSS/_header.scss */
 .fecha-menu #fecha {
   display: none;
 }
 
 @media only screen and (min-width: 769px) {
-  /* line 54, SCSS/_header.scss */
+  /* line 70, SCSS/_header.scss */
   .fecha-menu #fecha {
     display: block;
+    color: #d8e8ef;
+    font-size: 1.6rem;
+    margin-bottom: 0;
+    line-height: 47px;
   }
 }
 
-/* line 62, SCSS/_header.scss */
+/* line 82, SCSS/_header.scss */
 .fecha-menu .main-menu {
   position: fixed;
   width: 100%;
   top: -280px;
   left: 0;
   background-color: rgba(0, 91, 129, 0.92);
+  z-index: 500;
 }
 
-/* line 70, SCSS/_header.scss */
+/* line 91, SCSS/_header.scss */
 .fecha-menu .main-menu .menu li {
   text-align: center;
   border-top: 1px solid rgba(255, 255, 255, 0.25);
 }
 
-/* line 74, SCSS/_header.scss */
+@media only screen and (min-width: 769px) {
+  /* line 91, SCSS/_header.scss */
+  .fecha-menu .main-menu .menu li {
+    border-top: none;
+    position: relative;
+  }
+}
+
+/* line 100, SCSS/_header.scss */
 .fecha-menu .main-menu .menu li a {
   font-size: 1.6rem;
   color: #d8e8ef;
   text-transform: capitalize;
   padding: 1rem 0;
   display: block;
+  transition: all 0.3s ease;
+}
+
+/* line 108, SCSS/_header.scss */
+.fecha-menu .main-menu .menu li a:hover {
+  background-color: #00425d;
+}
+
+@media only screen and (min-width: 769px) {
+  /* line 100, SCSS/_header.scss */
+  .fecha-menu .main-menu .menu li a {
+    padding: 14px;
+  }
+}
+
+/* line 117, SCSS/_header.scss */
+.fecha-menu .main-menu .menu li .selected:after {
+  content: '';
+  width: 16px;
+  height: 8px;
+  background-image: url(../img/selected.png);
+  position: absolute;
+  top: 100%;
+  right: calc(50% - 8px);
+}
+
+@media only screen and (min-width: 769px) {
+  /* line 90, SCSS/_header.scss */
+  .fecha-menu .main-menu .menu {
+    display: flex;
+  }
+}
+
+@media only screen and (min-width: 769px) {
+  /* line 82, SCSS/_header.scss */
+  .fecha-menu .main-menu {
+    position: relative;
+    width: auto;
+    top: 0;
+    left: 0;
+    background-color: transparent;
+    display: flex;
+  }
 }
 
 /*=============  Fin de Header  ==============*/
@@ -173,21 +254,216 @@ html body figure img {
 =                      Main                    =
 ===============================================*/
 /* line 5, SCSS/_main.scss */
-.seccion-home-hero {
-  padding: 2rem 0;
-}
-
-/* line 8, SCSS/_main.scss */
-.seccion-home-hero .contenedor-logos {
-  width: 180px;
-  margin: 0 auto;
+.seccion {
+  padding: 4rem 0;
 }
 
 @media only screen and (min-width: 769px) {
-  /* line 8, SCSS/_main.scss */
+  /* line 5, SCSS/_main.scss */
+  .seccion {
+    padding: 6rem 0;
+  }
+}
+
+/* line 13, SCSS/_main.scss */
+.seccion-home-hero {
+  margin-top: 39px;
+  background-image: url(../img/home-hero.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: bottom center;
+}
+
+@media only screen and (min-width: 769px) {
+  /* line 13, SCSS/_main.scss */
+  .seccion-home-hero {
+    margin-top: 47px;
+  }
+}
+
+/* line 24, SCSS/_main.scss */
+.seccion-home-hero .contenedor-logos {
+  width: 180px;
+  margin: 0 auto;
+  perspective: 700;
+  -webkit-perspective: 700;
+}
+
+@media only screen and (min-width: 769px) {
+  /* line 24, SCSS/_main.scss */
   .seccion-home-hero .contenedor-logos {
     width: 250px;
   }
+}
+
+/* line 34, SCSS/_main.scss */
+.seccion-home-hero .contenedor-logos .logo-card {
+  width: 100%;
+  position: relative;
+  transform-style: preserve-3d;
+  transition: all 0.6s ease;
+  transform: rotateY(1980deg);
+}
+
+/* line 41, SCSS/_main.scss */
+.seccion-home-hero .contenedor-logos .logo-card:hover {
+  transform: rotateY(0deg);
+}
+
+/* line 46, SCSS/_main.scss */
+.seccion-home-hero .contenedor-logos .frontal, .seccion-home-hero .contenedor-logos .posterior {
+  backface-visibility: hidden;
+}
+
+/* line 50, SCSS/_main.scss */
+.seccion-home-hero .contenedor-logos .posterior {
+  position: absolute;
+  top: 0;
+  transform: rotateY(180deg);
+}
+
+@media only screen and (min-width: 769px) {
+  /* line 59, SCSS/_main.scss */
+  .seccion-partida .wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+
+/* line 67, SCSS/_main.scss */
+.seccion-partida .wrapper .img-articulo {
+  margin-bottom: 2rem;
+}
+
+@media only screen and (min-width: 769px) {
+  /* line 67, SCSS/_main.scss */
+  .seccion-partida .wrapper .img-articulo {
+    margin-bottom: 0;
+    width: 500px;
+  }
+}
+
+/* line 76, SCSS/_main.scss */
+.seccion-partida .wrapper .texto-articulo {
+  text-align: center;
+}
+
+@media only screen and (min-width: 769px) {
+  /* line 76, SCSS/_main.scss */
+  .seccion-partida .wrapper .texto-articulo {
+    text-align: left;
+    width: calc((100% - 500px) - 3rem);
+  }
+}
+
+/* line 83, SCSS/_main.scss */
+.seccion-partida .wrapper .texto-articulo .cta {
+  background-color: #005b81;
+  color: #d8e8ef;
+  padding: 1rem 2rem;
+  display: inline-block;
+  border-radius: 4px;
+  text-transform: capitalize;
+  transition: all 0.3s ease;
+}
+
+/* line 35, SCSS/_mixins.scss */
+.seccion-partida .wrapper .texto-articulo .cta:hover {
+  background-color: #00374e;
+}
+
+/* line 90, SCSS/_main.scss */
+.seccion-cards {
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+/* line 95, SCSS/_main.scss */
+.seccion-cards .card-container {
+  width: 50%;
+  perspective: 700;
+  -webkit-perspective: 700;
+}
+
+@media only screen and (min-width: 481px) {
+  /* line 95, SCSS/_main.scss */
+  .seccion-cards .card-container {
+    width: 33.3333333%;
+  }
+}
+
+@media only screen and (min-width: 769px) {
+  /* line 95, SCSS/_main.scss */
+  .seccion-cards .card-container {
+    width: 20%;
+  }
+}
+
+/* line 108, SCSS/_main.scss */
+.seccion-cards .card-container:hover .card {
+  transform: rotateY(180deg);
+}
+
+/* line 112, SCSS/_main.scss */
+.seccion-cards .card-container .card {
+  width: 100%;
+  position: relative;
+  transform-style: preserve-3d;
+  transition: all 0.3s ease;
+}
+
+/* line 118, SCSS/_main.scss */
+.seccion-cards .card-container .card .posterior {
+  backface-visibility: hidden;
+}
+
+/* line 122, SCSS/_main.scss */
+.seccion-cards .card-container .card .posterior {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #005b81;
+  text-align: center;
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  align-items: center;
+  transform: rotateY(180deg);
+}
+
+/* line 135, SCSS/_main.scss */
+.seccion-cards .card-container .card .posterior h3 {
+  font-size: 1.9rem;
+  color: #d8e8ef;
+}
+
+@media only screen and (min-width: 769px) {
+  /* line 135, SCSS/_main.scss */
+  .seccion-cards .card-container .card .posterior h3 {
+    font-size: 2.2rem;
+  }
+}
+
+/* line 144, SCSS/_main.scss */
+.seccion-cards .card-container .card .posterior .cta {
+  margin-top: 2rem;
+  width: 110px;
+  background-color: #d8e8ef;
+  color: #005b81;
+  padding: 1rem 2rem;
+  display: inline-block;
+  border-radius: 4px;
+  text-transform: capitalize;
+  transition: all 0.3s ease;
+}
+
+/* line 35, SCSS/_mixins.scss */
+.seccion-cards .card-container .card .posterior .cta:hover {
+  background-color: #6ca8c2;
 }
 
 /*==============  Fin de Main  ===============*/
