--- a/SCSS/_globales.scss
+++ b/SCSS/_globales.scss
@@ -24,7 +24,7 @@ html {
         height: 100%;
         font: 10px $font-rg;
 
-        p, a {
+        p, a, li {
             font-size: 1.9rem;
         }
 
@@ -34,6 +34,13 @@ html {
 
         .titulo {
             font: 4rem $font-bd;
+            color: $azul-fondo;
+            margin-top: 0;
+            margin-bottom: 1rem;
+        }
+
+        .subtitulo {
+            font: 2.8rem $font-bd;
             color: $azul-fondo;
             margin-bottom: 1rem;
         }
@@ -50,6 +57,14 @@ html {
                 width: 83.3333333%;
                 max-width: 1200px;
             }
+        }
+
+        .fondo-celeste {
+            background-color: $fondo-body;
+        }
+
+        .centrado {
+            text-align: center;
         }
 
         figure {
