--- a/SCSS/_main.scss
+++ b/SCSS/_main.scss
@@ -2,15 +2,78 @@
 =                      Main                    =
 ===============================================*/
 
+.titulo-home {
+    display: none;
+}
+
 .seccion {
     padding: $margen*2 0;
 
     @include dt {
         padding: $margen*3 0;
     }
+
+    .wrapper {
+        .titulo {
+            width: 100%;
+            text-align: center;
+        }
+    }
+
+    .benefits {
+       @include dt {
+            display: flex;
+            flex-flow: wrap;
+            justify-content: space-between;
+       }
+    }
+
+    .benefit {
+        &:not(:last-child) {
+            margin-bottom: $margen*2;
+
+            @include tb {
+                margin-bottom: 0;
+            }
+        }
+
+        @include tb {
+            display: flex;
+            justify-content: space-between;
+            margin: $margen*2 0;
+        }
+
+        @include dt {
+            width: calc(50% - #{$margen});
+        }
+    }
+
+    .img-benefit {
+        margin-bottom: $margen;
+
+        @include tb {
+            margin-bottom: 0;
+            width: calc(50% - #{$margen/2});
+        }
+    }
+
+    .texto-benefit {
+        @include tb {
+            width: calc(50% - #{$margen/2});
+        }
+
+        .subtitulo {
+            font-size: 2rem;
+        }
+
+        p {
+            font-size: 1.5rem;
+        }
+    }
 }
 
-.seccion-home-hero {
+.seccion-home-hero,
+.seccion-inner-hero  {
     margin-top: 39px;
     background-image: url(../img/home-hero.png);
     background-repeat: no-repeat;
@@ -22,35 +85,107 @@
     }
 
     .contenedor-logos {
-        width: 180px;
         margin: 0 auto;
         perspective: 700;
         -webkit-perspective: 700;
-
-        @include dt {
-            width: 250px;
-        }
+        -moz-perspective: 700;
 
         .logo-card {
             width: 100%;
             position: relative;
             transform-style: preserve-3d;
+            -webkit-transform-style: preserve-3d;
+            -moz-transform-style: preserve-3d;
             @include transicion(6);
-            transform: rotateY(1980deg);
+            transform: rotateY(4140deg);
 
-            &:hover {
-                transform: rotateY(0deg);
+            .frontal {
+                opacity: 0;
+                @include transicion(6);
+            }
+
+            .frontal, .posterior {
+                backface-visibility: hidden;
+                -webkit-backface-visibility: hidden;
+                -moz-backface-visibility: hidden;
+            }
+    
+            .posterior {
+                position: absolute;
+                top: 0;
+                transform: rotateY(180deg);
             }
         }
 
-        .frontal, .posterior {
-            backface-visibility: hidden;
+        .logo-kcs {
+            transform: rotateY(0deg)!important;
+
+            .frontal {
+                opacity: 1;
+            }
+
+            .posterior {
+                opacity: 0;
+            }
+        }
+    }
+}
+
+.seccion-home-hero {
+
+    .contenedor-logos {
+        width: 180px;
+
+        @include dt {
+            width: 250px;
+        }
+    }
+}
+
+.seccion-inner-hero {
+    padding: $margen 0 0;
+
+    .wrapper {
+        width: 100%;
+        position: relative;
+
+        @include tb {
+            max-width: 400px;
         }
 
-        .posterior {
-            position: absolute;
-            top: 0;
-            transform: rotateY(180deg);
+        @include dt {
+            width: 83.3333333%;
+            max-width: 1200px;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            align-items: center;
+        }
+    }
+
+    @include dt {
+        padding-top: 0;
+    }
+
+    .contenedor-logos {
+        width: 75px;
+
+        @include dt {
+            width: 150px;
+        }
+    }
+
+    .titulo {
+        margin: $margen 0;
+        
+        @include dt {
+            width: calc(100% - 430px)!important;
+        }
+    }
+
+    .hero-pic {
+        @include dt {
+            width: 280px;
         }
     }
 }
@@ -87,6 +222,144 @@
     }
 }
 
+.seccion-principios, #propuesta-laboral, .partida-abierta {
+    .wrapper {
+        @include dt {
+            align-items: flex-start;
+        }
+    }
+
+    .principio:not(:last-child) {
+        margin-bottom: $margen*2;
+    }
+
+    .icono-principios {
+        background-color: $azul-fondo;
+        color: #fff;
+        text-align: center;
+        width: 6rem;
+        height: 6rem;
+        margin: 0 auto $margen;
+        border-radius: 50%;
+
+        .icon {
+            font-size: 3rem;
+            line-height: 7.5rem;
+        }
+    }
+
+    .subtitulo {
+        text-align: center;
+    }
+
+    .wrapper {
+        .alfinal {
+            @include dt {
+                order: 3;
+            }
+        }
+
+        .texto-articulo {
+            text-align: left;
+            @include dt {
+                width: calc((100% - 500px) - #{$margen*6});
+            }
+    
+            .cta {
+                @include cta($azul-fondo, $fondo-body, 10);
+            }
+
+            .lista-articulo {
+                li {
+                    list-style: square;
+                    margin-left: 1.8rem;
+                    
+                    &:not(:last-child) {
+                        margin-bottom: 2rem;
+                    }
+                }
+            }
+        }
+    }
+}
+
+.partida-abierta {
+    .subtitulo {
+        text-align: left;
+    }
+}
+
+#propuesta-laboral, .seccion-contacto {
+    form {
+        input, select {
+            font-size: 1.6rem;
+            padding: 5px;
+            border: none;
+            width: 100%;
+
+            &:not(:last-child) {
+                margin-bottom: $margen;
+            }
+        }
+
+        .boton {
+            .cta {
+                @include dt {
+                    width: 120px;
+                }
+            }
+        }
+    }
+}
+
+.seccion-contacto {
+    form {
+        @include dt {
+            display: flex;
+            justify-content: space-between;
+            flex-flow: wrap;
+        }
+    }
+
+    textarea {
+        width: 100%;
+        border: none;
+        resize: none; 
+        font-size: 1.6rem;
+        padding: 5px;
+        margin-top: $margen;
+        height: 10rem;
+
+        @include dt {
+            height: auto;
+            margin-top: 0;
+        }
+    }
+
+    .inputs, textarea {
+        @include dt {
+            width: calc(50% - #{$margen});
+        }
+    }
+
+    .boton {
+        width: 100%;
+        margin-top: $margen;
+
+        .cta {
+            @include cta($azul-fondo, $fondo-body, 10);
+        }
+    }
+}
+
+.seccion-ubicanos {
+    padding-bottom: 0;
+
+    iframe {
+        width: 100%;
+    }
+}
+
 .seccion-cards {
     padding: 0;
     display: flex;
@@ -96,13 +369,14 @@
         width: 50%;
         perspective: 700;
         -webkit-perspective: 700;
+        -moz-perspective: 700;
 
         @include tb {
             width: 33.3333333%;
         }
 
         @include dt {
-            width: 20%;
+            width: 16.666666666%;
         }
 
         &:hover .card {
@@ -113,10 +387,14 @@
             width: 100%;
             position: relative;
             transform-style: preserve-3d;
+            -webkit-transform-style: preserve-3d;
+            -moz-transform-style: preserve-3d;
             @include transicion(3);
 
-            .posterior {
+            .frontal, .posterior {
                 backface-visibility: hidden;
+                -webkit-backface-visibility: hidden;
+                -moz-backface-visibility: hidden;
             }
 
             .posterior {
@@ -147,6 +425,68 @@
                     @include cta($fondo-body, $azul-fondo, 30);
                 }
             }
+        }
+    }
+}
+
+.seccion-videoinfo {
+    .videoinfo {
+        width: 100%;
+        max-width: 800px;
+        margin: 0 auto;
+
+        img {
+            width: 100%;
+            display: block;
+        }
+    }
+}
+
+.seccion-companies {
+    .companies {
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        align-items: center;
+        margin-top: $margen;
+
+        .companie {
+            width: 40%;
+            margin: 1rem;
+
+            @include tb {
+                width: 30%;
+            }
+
+            @include dt {
+                width: 15%;
+            }
+        }
+    }
+}
+
+.galeria {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+
+    @include dt {
+        align-items: center;
+    }
+
+    .foto-galeria {
+        max-width: 300px;
+        width: calc(50% - #{$margen}/2);
+        margin: $margen/3 0;
+
+        @include tb {
+            margin: $margen 0;
+        }
+
+        @include dt {
+            width: calc(25% - #{$margen}*2);
+            // margin: $margen 0;
         }
     }
 }
