--- a/SCSS/_footer.scss
+++ b/SCSS/_footer.scss
@@ -29,7 +29,7 @@ footer {
         
         .rrss-icon {
             width: 4rem;
-            height: 4em;
+            height: 4rem;
             text-align: center;
 
             &:not(:first-child) {
@@ -48,9 +48,9 @@ footer {
                     background-color: darken($azul-fondo, 7);
                 }
 
-                .icon {
+                .fas, .fab, .fa {
                     font-size: 2.5rem;
-                    line-height: 4.7rem;
+                    line-height: 4rem;
                     color: $azul-fondo;
                 }
             }
@@ -61,6 +61,15 @@ footer {
                     display: none;
                 }
             }
+        }
+    }
+
+    .kallpa-radio-tv {
+        width: 8rem;
+        margin: $margen auto 0 auto;
+
+        @include dt {
+            margin: 0;
         }
     }
 
