--- a/SCSS/_main.scss
+++ b/SCSS/_main.scss
@@ -2,6 +2,120 @@
 =                      Main                    =
 ===============================================*/
 
+// Modal
+.bg-modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 600;
+    background-color: rgba(0,0,0,0.7);
+    transition: all 0.3s ease;
+    display: none;
+
+    .modal {
+        width: 85%;
+        position: relative;
+        margin: 0 auto;
+        background-color: $azul-fondo;
+        top: 65px;
+        padding: $margen/2;
+        box-shadow: 0 0 10px -2px #000;
+        display: none;
+
+        @include dt {
+            padding: $margen;
+        }
+
+        .cerrar {
+            position: absolute;
+            width: 4rem;
+            height: 4rem;
+            border-radius: 50%;
+            background-color: darken($azul-fondo, 10%);
+            top: -1rem;
+            right: -1rem;
+            text-align: center;
+            cursor: pointer;
+            box-shadow: 0 0 10px -2px #000;
+
+            .fas {
+                color: #fff;
+                line-height: 4rem;
+                font-size: 2.5rem;
+            }
+        }
+
+        h4 {
+            color: #fff;
+            font-size: 2rem;
+            text-align: center;
+            margin-bottom: $margen/2;
+
+            @include tb {
+                font-size: 2.6rem;
+                margin-bottom: $margen;
+            }
+        }
+
+        @include dt {
+            width: 600px;
+        }
+
+        figure {
+            width: 85%;
+            margin: 0 auto;
+            text-align: center;
+            transform: rotate(-5deg);
+            box-shadow: 0 0 10px 1px #000;
+        }
+
+        p {
+            color: #fff;
+            position: relative;
+            z-index: 601;
+            margin-top: -3rem;
+            font-size: 1.5rem;
+            padding: $margen/2;
+            background-color: rgba(0,0,0,0.8);
+        }
+    }
+
+    @keyframes dearriba {
+        0% {
+            top: -75%;
+            opacity: 0;
+        }
+
+        100% {
+            top: 65px;
+            opacity: 1;
+        }
+    }
+
+    @keyframes deabajo {
+        0% {
+            top: 65px;
+            opacity: 1;
+        }
+
+        100% {
+            top: -75%;
+            opacity: 0;
+        }
+    }
+
+    .bajan {
+        animation: dearriba 1s;
+    }
+
+    .suben {
+        animation: deabajo 1s;
+    }
+}
+
+
 .titulo-home {
     display: none;
 }
@@ -255,9 +369,9 @@ section .wrapper {
         margin: 0 auto $margen;
         border-radius: 50%;
 
-        .icon {
+        .fas, .fab, .fa {
             font-size: 3rem;
-            line-height: 7.5rem;
+            line-height: 6rem;
         }
     }
 
